--- a/components/SelectItem/index.scss
+++ b/components/SelectItem/index.scss
@@ -1,4 +1,5 @@
 .SelectItem {
+  align-items: center;
   border-radius: $item-corner;
   border: 2px solid transparent;
   color: var(--text-tertiary);
